<resources>
    <string name="app_name">Delivery Android</string>
    <string name="title_pedido_detail">Detalle del pedido</string>

    <string name="pedido_numero">n°: </string>
    <string name="pedido_estado"> Estado: </string>

    <string name="pedido_cliente_nombre">Nombre: </string>
    <string name="pedido_direccion">Direccion: </string>
    <string name="pedido_montoFinal">Monto final: </string>
    <string name="estado_cancelar"> Cancelar pedido </string>
    <string name="estado_siguiente">Avanzar pedido </string>
    <string name="pedido_platos_nombre">Plato:</string>
    <string name="pedido_plato">Platos: </string>
    <string name="pedido_aclaraciones">Aclaraciones:</string>
    <string name="numero">Numero</string>
    <string name="cliente">Cliente</string>
    <string name="estado">Estado</string>

</resources>
